--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,7 @@ div#main {
 div#main p {
 	padding:32px 0px 0px 0px;
 }
+
 /* ********** DIV#SIDEBAR ********** */
 
 div#sidebar {
@@ -306,4 +307,472 @@ div.thumbnail {
 
 div.thumbnail:nth-of-type(even) {
 	margin-left:48px;
+}
+
+/* ********** RESPONSIVE DESIGN ********** */
+
+/* ----- MOBILE ----- */
+@media screen and (max-width: 640px) {
+	
+	/* --- HEADER --- */
+
+	body {
+		max-width:100%;
+		overflow-x:hidden;
+	}
+
+	header {
+		position: static;
+		height:170px;
+		width:100%;
+		margin:0 auto;
+	}
+
+	h1 {
+		position:relative;
+		left:0;
+
+		text-align: center;
+		background-color:#00afa8;
+
+		width:100%;
+		margin-left:-20px;
+		padding:5% 0% 5% 5%;
+	}
+
+	/* --- FOOTER --- */
+	footer {
+		position:fixed;
+		bottom:0;
+
+		width:100%;
+		height:94px;	
+	}
+
+
+	/* --- NAVIGATION --- */
+
+	nav {
+		position: relative;
+		width: 100%;
+		margin:0 auto;
+		top:18px;
+		bottom:5px;
+	}
+
+	ul {
+		float:left;
+		margin-left: 52%;
+	}
+
+	li {
+		display:inline-block;
+		position:relative;
+		list-style-type: none;
+		border-style: solid;
+		border-width: 0px 1.5px 0px 0px;
+		border-color: #dddddd;
+		float:left;
+		text-align:center;
+		padding:0px 13px 0px 13px;
+
+	}
+
+	li:last-child {
+		border-width: 0px;
+	}
+
+	/* --- DIV#CONTENT--- */
+
+	div#content {
+		width:95%;
+		margin-left:2.5%;
+		margin-right:2.5%;
+	}
+
+	/* --- DIV#MAIN --- */
+
+	h2#about {
+		padding: 13px 70% 35px 8px;
+	}
+
+	img#profilepic {
+		width:90%;
+		display:block;
+		float:left;
+		padding:32px 25px 25px 25px;
+	}
+
+	div#main {
+		position:relative;
+		left:0;
+
+		width:89%;
+		display:block;
+		float:left;
+
+		background-color: white;
+		border-style: solid;
+		border-color:#dddddd;
+		border-width: 2px 2px 2px 2px;
+	}
+
+	div#main p {
+		padding:32px 0px 0px 0px;
+	}
+
+
+	/* --- DIV#SIDEBAR --- */
+
+	h3#connect {
+		color:#00afa8;
+
+		
+		float:left;
+
+		font-weight:bold;
+		border-style:solid;
+		border-color: #dddddd;
+		border-width: 0px 0px 3px 0px;
+		padding: 28px 64% 28px 0px;
+	}
+
+	img.social {
+		width:17%;
+		padding:15px 2px 0px 10px;
+	}
+
+	div#sidebar {
+		position:relative;
+		left:0px;
+		top:0px;
+
+		background-color:white;
+		border-style: solid;
+		border-color: #dddddd;
+		border-width: 2px 2px 2px 2px;
+
+		margin-bottom:144px;
+		margin-top:-10%;
+		float: left;
+		height:201px;
+		width:101%;
+		padding:0px 32px 0px 32px;
+		box-sizing: border-box;
+	}
+
+	/* --- PORTFOLIO ---*/
+	
+	h2#portfolio {
+		padding:13px 72% 35px 8px;
+	}
+
+	h3.portname {
+		color:#ffffff;
+		background-color: #00afa8;
+		text-align: center;
+
+		position:absolute;
+		left:0px;
+		top:80%;
+		padding:23px 39.5% 23px 39.5%;
+		width:100%;
+
+		display:inline-block;
+		float:left;
+	}
+
+	img.portfolio {
+		width:179%;
+		margin-top:40px;
+		position:relative;
+	}
+
+	div.thumbnail, div.thumbnail:nth-of-type(even) {
+		width:300px;
+		margin:0;
+		padding:0px;
+		display: block;
+		float:left;
+		position:relative;
+	}
+
+	/* --- CONTACT --- */
+
+	input {
+		width:98%;
+		font-size:14px;
+		padding:5px;
+		margin:5px 5px 10px 0px;
+	}
+
+}
+
+
+/* ----- TABLET ----- */
+@media screen and (min-width: 640px) and (max-width: 768px) {
+
+	/* --- HEADER ---*/
+
+	body {
+		max-width:100%;
+		overflow-x:hidden;
+	}
+
+	header {
+		position: static;
+		height:89px;
+		width:100%;
+		margin:0 auto;
+	}
+
+	h1 {
+		padding:27.5px 7% 27.5px 7%;
+		width:200px;
+		margin-top:0px;
+		margin-bottom:0px;
+		margin-left:5%;
+		margin-right:0px;
+	}
+
+	/* --- NAVIGATION --- */
+	nav {
+		position: absolute;
+		width: 100%;
+		top:30px;
+		right:-10%;
+	}
+
+	ul {
+		float:left;
+		margin-left: 52%;
+	}
+
+	li {
+		display:inline-block;
+		position:relative;
+		list-style-type: none;
+		border-style: solid;
+		border-width: 0px 1.5px 0px 0px;
+		border-color: #dddddd;
+		float:left;
+		text-align:center;
+		padding:0px 13px 0px 13px;
+
+	}
+
+	li:last-child {
+		border-width: 0px;
+	}
+
+	/* --- FOOTER --- */
+
+	footer {
+		background-color: #666666;
+		position:fixed;
+		bottom:0px;
+		width:100%;
+		height:94px;	
+		border-style:solid;
+		border-color:#00afa8;
+		border-width: 8px 0px 0px 0px;
+	}
+
+	footer p {
+		display:block;
+		text-align: center;
+		padding:28.5px 50px 28.5px 50px;
+	}
+
+
+	/* --- DIV#MAIN --- */
+
+	h2#about {
+		padding: 13px 70% 35px 8px;
+	}
+
+	img#profilepic {
+		width:50%;
+		display:block;
+		float:left;
+		padding:32px 25px 25px 25px;
+	}
+
+	div#main {
+		position:relative;
+		left:1.5%;
+
+		width:69%;
+		display:block;
+		float:left;
+
+		background-color: white;
+		border-style: solid;
+		border-color:#dddddd;
+		border-width: 2px 2px 2px 2px;
+	}
+
+	div#main p {
+		padding:32px 0px 0px 0px;
+	}
+
+
+	/* --- DIV#SIDEBAR ---*/
+
+	h3#connect {
+		color:#00afa8;
+
+		
+		float:left;
+
+		font-weight:bold;
+		border-style:solid;
+		border-color: #dddddd;
+		border-width: 0px 0px 3px 0px;
+		padding: 28px 64% 28px 0px;
+	}
+
+	img.social {
+		width:11%;
+		padding:15px 2px 0px 10px;
+	}
+
+	div#sidebar {
+		position:relative;
+		left:1.5%;
+		top:1%;
+
+		background-color:white;
+		border-style: solid;
+		border-color: #dddddd;
+		border-width: 2px 2px 2px 2px;
+
+		margin-bottom:144px;
+		margin-top:-10%;
+		float: left;
+		height:201px;
+		width:76.5%;
+		padding:0px 32px 0px 32px;
+		box-sizing: border-box;
+	}
+
+}
+
+/* ----- DESKTOP ----- */
+@media screen and (max-width: 980px) {
+
+	/* --- HEADER --- */
+	body {
+		max-width: 980px;
+		overflow-x: hidden;
+
+	}
+
+	header {
+		position: relative;
+		height:89px;
+		width:100%;
+		margin:0 auto;
+	}
+
+	h1 {
+		padding:27.5px 7% 27.5px 7%;
+		width:200px;
+		margin-top:0px;
+		margin-bottom:0px;
+		margin-left:9%;
+		margin-right:0px;
+	}
+
+	/* --- NAVIGATION --- */
+	nav {
+		position: absolute;
+		width: 100%;
+		top:30px;
+		right:-15%;
+	}
+
+	ul {
+		float:left;
+		margin-left: 52%;
+	}
+
+	li {
+		display:inline-block;
+		position:relative;
+		list-style-type: none;
+		border-style: solid;
+		border-width: 0px 1.5px 0px 0px;
+		border-color: #dddddd;
+		float:left;
+		text-align:center;
+		padding:0px 13px 0px 13px;
+
+	}
+
+	li:last-child {
+		border-width: 0px;
+	}
+
+	/* --- FOOTER --- */
+	footer {
+		background-color: #666666;
+		position:fixed;
+		bottom:0px;
+		width:100%;
+		height:94px;	
+		border-style:solid;
+		border-color:#00afa8;
+		border-width: 8px 0px 0px 0px;
+	}
+
+	footer p {
+		display:block;
+		text-align: center;
+		padding:28.5px 50px 28.5px 50px;
+	}
+
+	/* --- DIV#MAIN --- */
+	h2#about {
+		padding: 13px 70% 35px 8px;
+	}
+
+	img#profilepic {
+		width:94%;
+		display:block;
+		float:left;
+		padding:32px 25px 25px 25px;
+	}
+
+	div#main {
+		position:relative;
+		left:9%;
+
+		width:35%;
+		display:block;
+		float:left;
+
+		background-color: white;
+		border-style: solid;
+		border-color:#dddddd;
+		border-width: 2px 2px 2px 2px;
+	}
+
+	div#main p {
+		padding:32px 0px 0px 0px;
+	}
+	/* --- DIV#SIDEBAR ---*/
+	
+	div#sidebar {
+		position:absolute;
+		right:9%;
+		top:131px;
+		display: inline-block;
+		float: left;
+
+		margin-bottom:144px;
+		height:201px;
+		padding:0px 32px 0px 32px;
+		box-sizing: border-box;
+	}
 }
