--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,9 @@ header {
 
 footer {
 	background-color: #666666;
-	position:fixed;
-	bottom:0;
+	clear:both;
+	/*position:fixed;
+	bottom:0;*/
 	width:100%;
 	height:94px;	
 	border-style:solid;
@@ -342,8 +343,6 @@ div.thumbnail:nth-of-type(even) {
 
 	/* --- FOOTER --- */
 	footer {
-		position:fixed;
-		bottom:0;
 
 		width:100%;
 		height:94px;	
